Abac krever distinct attributes + logg litt mer (#1162)